syntax = "proto3";
package tasks;

service TasksService {
  rpc listTasks(Empty) returns (TaskList) {}
  rpc getTask(TaskId) returns (Task) {}
  rpc postTask(postTask) returns (Task) {}
  rpc putTask(Task) returns (response) {}
  rpc deleteTask(TaskId) returns (response) {}
}

message Empty {}
message response { string status = 1; }

message TaskList { repeated Task tasks = 1; }

message TaskId { string _key = 1; }

message Task {
  string _id = 1;
  string _key = 2;
  string title = 3;
  string description = 4;
  bool completed = 5;
  repeated Task subtasks = 6;
}

message postTask { string title = 1; }

message putTaskBody {
  string _key = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}